fix: frontend screen overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,7 @@
 
 .App {
   min-height: 100vh;
-  min-width: 100vw;
+  max-width: 100vw;
   background-color: #0f1213;
   color: white;
 }
